force-app/main/default/objects/ssot__ClaimPayment__dlm/fields/ssot__AdjustmentReasonId__c.field-meta.xml
<CustomField>
    <fullName>ssot__AdjustmentReasonId__c</fullName>
    <label>Adjustment Reason</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AdjustmentReasonId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>