force-app/main/default/objects/ssot__ClaimPayment__dlm/fields/ssot__CancellationDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__CancellationDateTime__c</fullName>
    <label>Cancellation Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CancellationDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>