force-app/main/default/objects/ssot__ClaimPayment__dlm/fields/ssot__ClaimPayment_ClaimId_map_Claim_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClaimPayment_ClaimId_map_Claim_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClaimPayment_ClaimId_map_Claim_Id_N_1</label>
    <referenceTo>ssot__Claim__dlm</referenceTo>
    <relationshipLabel>ClaimPayment_ClaimId_map_Claim_Id_N_1</relationshipLabel>
    <relationshipName>ClaimPayment_ClaimId_map_Claim_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>