force-app/main/default/objects/ssot__ClaimPayment__dlm/fields/ssot__PaymentIdentifier__c.field-meta.xml
<CustomField>
    <fullName>ssot__PaymentIdentifier__c</fullName>
    <label>Payment Identifier</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PaymentIdentifier</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>