force-app/main/default/objects/ssot__ClaimPayment__dlm/fields/ssot__PaymentTypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PaymentTypeId__c</fullName>
    <label>Payment Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PaymentTypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>