force-app/main/default/objects/ssot__ClaimPayment__dlm/fields/ssot__rel_1723128326803_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723128326803_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClaimPayment_AdjustmentReasonId_map__rel</label>
    <referenceTo>ssot__CodeSet__dlm</referenceTo>
    <relationshipLabel>ClaimPayment_AdjustmentReasonId_map__rel</relationshipLabel>
    <relationshipName>rel_1723128326803_end</relationshipName>
    <type>Lookup</type>
</CustomField>