force-app/main/default/objects/ssot__ClaimPayment__dlm/fields/ssot__rel_1723128330599_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723128330599_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClaimPayment_PaymentTypeId_map_CodeS_rel</label>
    <referenceTo>ssot__CodeSet__dlm</referenceTo>
    <relationshipLabel>ClaimPayment_PaymentTypeId_map_CodeS_rel</relationshipLabel>
    <relationshipName>rel_1723128330599_end</relationshipName>
    <type>Lookup</type>
</CustomField>